# mite_web

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_docker.sh  dev-compose.yml  docker-compose.override.yml  docker-compose.yml  legacy_docker-compose.override.yml  pyproject.toml  reviewers.example.csv
.github/workflows/: ci.yml  containerize.yml
app/: database.py  main.py
app/api/v1/: pages.py
app/api/v2/: pages.py
app/auth/: basic.py  passwords.py
app/config/: config.py  templates.py
app/core/: config.py  csrf.py  logging.py  shared.py  templates.py
app/crud/: entries.py
app/db/: crud.py  database.py  models.py
app/middleware/: csrf_middleware.py
app/models/: entries.py  entries_metadata.py
app/schemas/: blast.py  items.py  pathway.py  reaction.py  structure.py  structures.py  submission.py
app/services/: file_handling.py  filtering.py  github.py  items.py  submission.py  validation.py
app/static/css/: style.css
app/static/js/: arrow_navigation.js  dark_theme.js  disable_button.js  querybuilder.js  submission.js
app/templates/: _macro_navigation.html  about.html  active_table.html  base.html  canonicalize.html  canonsmiles.html  contact.html  download.html  downloads.html  dryrun.html  entry.html  entry_not_found.html  faqs.html  flatten.html  index.html  overview.html  overview_retired.html  pathway.html  peptide.html  peptidesmiles.html  preview_reviewer.html  preview_submitter.html  review_success.html  submission.html  submission_form.html  termsofuse.html  troubleshooting.html  tutorial.html  warning.html
app/web/: pages.py  views.py
app/web/pages/: debug.py  download.py  pages.py  repository.py  robots.py
app/web/views/: overview.py  pathway.py  structures.py  submission.py  views.py
compose/mite_web/: Dockerfile
compose/nginx/: Dockerfile  maintenance.html  nginx.conf
mite_web/: .pre-commit-config.yaml  data_upload.py  download_mite_data.py  entrypoint_docker.sh  prepare_mite_data.py  pyproject.toml
mite_web/mite_web/: __init__.py  models.py  prepare_mite_data.py  run_pymol.sh  seed.py  temp
mite_web/mite_web/api/: mite_api.py
mite_web/mite_web/config/: extensions.py
mite_web/mite_web/forms/: forms.py
mite_web/mite_web/prep_data/: aux_file_manager.py  blast_manager.py  download_manager.py  html_json_manager.py  image_manager.py  mibig_manager.py
mite_web/mite_web/routes/: __init__.py  routes_main.py  routes_repository.py  routes_submission.py
mite_web/mite_web/static/css/: style.css
mite_web/mite_web/static/js/: backup_submission.js  copy_clipboard.js  dynamic_fields.js  querybuilder.js  submission.js  table_counter.js
mite_web/mite_web/templates/: 405.html  _macro_navigation.html  _macros_submission.html  _navigation_entry.html  about.html  active.html  active_reaction.html  active_table.html  backup_submission_form.html  base.html  contact.html  downloads.html  entry.html  entry_auxiliary_enz.html  entry_changelog.html  entry_general.html  entry_not_found.html  faqs.html  help.html  index.html  overview.html  overview_retired.html  pathway.html  repository.html  retired.html  review.html  smiles_canonicalize.html  smiles_peptide.html  submission.html  submission_existing.html  submission_failure.html  submission_form.html  submission_success.html  submission_terms_of_use.html  troubleshooting.html  tutorial.html
production/bioinformatics.nl/: compose.yml  nginx.conf
scripts/: create_db.py  hash_pw.py  prepare_data.py
tests/: conftest.py
tests/dummydata/: MITE0000001.json  app.db
tests/test_auth/: test_auth.py
tests/test_core/: test_config.py
tests/test_db/: test_crud.py
tests/test_schemas/: test_pathway.py  test_structures.py  test_submission.py  test_submission1.py
tests/test_service/: test_items.py  test_submission2.py  test_validation.py
