[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Repository" = "https://github.com/mite-standard/mite_web"

[project]
name = "mite_web"
version = "1.4.0"
description = "Code for web presence of the Minimum Information about a Tailoring Enzyme (MITE) data standard"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]
keywords = [
    "cheminformatics",
    "genomics"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]

dependencies = [
    "AlphaFetcher~=0.2",
    "biopython~=1.84",
    "coloredlogs~=15.0",
    "jsondiff~=2.2",
    "Flask~=3.0",
    "Flask-Mail~=0.9",
    "flask-restx~=1.3",
    "Flask-WTF~=1.2",
    "gevent~=24.2",
    "gunicorn~=23.0",
    "mite_extras==1.5.0",
    "pandas~=2.2",
    "requests~=2.32",
    "rdkit==2024.3.6"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest~=7.4",
    "ruff"
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.dev]
installer = "uv"
features = [
    "dev"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/",
]
pythonpath = [
    "mite_web/"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    # unneccesary True False
    "SIM210",
    # combine nested if conditionals
    "SIM102",
    # if-else block
    "SIM108"
]